tests/fixtures/positive/complexity/ComplexInterface.kt
package complexity

interface ComplexInterface {
    fun method1()
    fun method2()
    fun method3()
    fun method4()
    fun method5()
    fun method6()
    fun method7()
    fun method8()
    fun method9()
    fun method10()
    fun method11()
}
