tests/fixtures/negative/complexity/ComplexInterface.kt
package complexity

interface SimpleInterface {
    fun method1()
    fun method2()
    fun method3()
    fun method4()
    fun method5()
}
